Made some changes

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,11 @@ dependencies:
   flutter_map: ^7.0.2
   latlong2: ^0.9.1
   geolocator: ^13.0.2
+  shared_preferences: ^2.3.5
+  csv: ^6.0.0
+  sqflite: ^2.4.1
+  path_provider: ^2.1.5
+  weather: ^3.1.1
 
 dev_dependencies:
   flutter_test:
